# Guitar-Workshop

./: .gitignore  .gitmodules  README.md  README.ru.md  docker-compose.yaml  makefile  to_delete.txt
analyzer/: Dockerfile
api-gateway/: Dockerfile  go.mod
audio-analyzer/: Dockerfile  audio_pb2.py  audio_pb2_grpc.py  main.py
audio-analyzer/app/: audio.py  audio_pb2.py  audio_pb2.pyi  files_access.py  log.py  main.py  pyproject.toml  requirements.txt  test.py  youtube.py
audio-analyzer/app/audio/: audio.py
audio-analyzer/app/audioproto/: audio_pb2_grpc.py
audio-analyzer/app/storage/: storage.py
audio-preprocessor/: .dockerignore  CMakeUserPresets.json  CmakeLists.txt  Dockerfile  conanfile.txt
audio-preprocessor/app/: CMakeLists.txt  CMakeUserPresets.json  conanfile.txt
audio-preprocessor/app/include/config/: config.h
audio-preprocessor/app/include/core/audio_file/: AudioFileIO.h
audio-preprocessor/app/include/core/processor/: AudioConfigs.h  AudioProcessor.h  ProcessingConfig.h
audio-preprocessor/app/include/processor/: config.h  processor.h
audio-preprocessor/app/include/server/: audio_processor_server.h
audio-preprocessor/app/proto/: audio_processor.grpc.pb.cc  audio_processor.grpc.pb.h  audio_processor.pb.cc  audio_processor.pb.h  processor.grpc.pb.cc  processor.grpc.pb.h  processor.pb.cc  processor.pb.h
audio-preprocessor/app/src/: main.cpp
audio-preprocessor/app/src/config/: config.cpp
audio-preprocessor/app/src/core/audio_file/: AudioFileIO.cpp
audio-preprocessor/app/src/core/processor/: AudioProcessor.cpp
audio-preprocessor/app/src/server/: audio_processor_server.cpp
audio-separator/: Dockerfile
fx-processor/: CMakeLists.txt
fx-processor/app/: CMakeLists.txt
fx-processor/app/proto/: fx_processor.grpc.pb.cc  fx_processor.grpc.pb.h  fx_processor.pb.cc  fx_processor.pb.h
fx-processor/app/src/: main.cpp
onsets-frames/: Dockerfile
proto/: audio.proto  audio_processor.proto  fx_processor.proto  note_analyzer.proto  processor.proto  riff.proto  separator.proto  tab.proto
tab-generator/: Dockerfile  go.mod
(+133 files in other folders)
